# Chess

./: .clang-tidy  .gitignore  .markdownlint.json  CMakeLists.txt  CPPLINT.cfg  README.md  clang-tidy-output
.github/workflows/: codacy-analysis.yml  test
test/: test.cc
